--- a/exo3/index.html
+++ b/exo3/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <script src="script.js"></script>
   <head>
+    <script src="script.js"></script>
     <meta charset="UTF-8" />
     <title>TP js- exo3</title>
   </head>
   <body>
-    <header></header>
-    <nav></nav>
+    <header>
+    </header>
+    <nav>
+    </nav>
     <main>
       <button onclick="A()">Délibération</button>
     </main>
-    <footer></footer>
+    <footer>
+    </footer>
   </body>
 </html>
